--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = "mongodb+srv://fredericnad:1234fred@cluster0.p6elgqd.mongodb.net/?retryWrites=true&w=majority"
+FRONTEND_URL = "http://localhost:3000"
