--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "svg-captcha": "^1.4.0",
     "swagger-jsdoc": "^6.2.8",
